src/query/ast/tests/it/testdata/statement-error.txt
---------- Input ----------
create table a.b (c integer not null 1, b float(10))
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | create table a.b (c integer not null 1, b float(10))
  | ------                               ^ expected `)`, `NULL`, `NOT`, `DEFAULT`, `GENERATED`, `AS`, `COMMENT`, or `,`
  | |                                     
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c float(10))
---------- Output ---------
error: 
  --> SQL:1:24
  |
1 | create table a (c float(10))
  | ------                 ^ expected `)`, `NULL`, `NOT`, `DEFAULT`, `GENERATED`, `AS`, `COMMENT`, or `,`
  | |                       
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c varch)
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | create table a (c varch)
  | ------          - ^^^^^ expected `VARCHAR`, `CHAR`, `VARIANT`, `CHARACTER`, `VARBINARY`, `ARRAY`, `BINARY`, `MAP`, `DATE`, `STRING`, `FLOAT32`, `FLOAT64`, `DECIMAL`, `SMALLINT`, `DATETIME`, `NULLABLE`, `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `UINT32`, `INT`, `INTEGER`, `UINT64`, `UNSIGNED`, `BIGINT`, `INT8`, `INT16`, `INT32`, `INT64`, `SIGNED`, `FLOAT`, `DOUBLE`, `BITMAP`, `TUPLE`, `TIMESTAMP`, `TEXT`, or `JSON`
  | |               |  
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c tuple())
---------- Output ---------
error: 
  --> SQL:1:25
  |
1 | create table a (c tuple())
  | ------          - ----- ^ expected `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `SMALLINT`, `UINT32`, `INT`, `INTEGER`, `UINT64`, `UNSIGNED`, `BIGINT`, `INT8`, `INT16`, `INT32`, `INT64`, `SIGNED`, `FLOAT32`, `FLOAT`, `FLOAT64`, `DOUBLE`, `DECIMAL`, `ARRAY`, `MAP`, `BITMAP`, `TUPLE`, `DATE`, `DATETIME`, `TIMESTAMP`, `STRING`, `VARCHAR`, `CHAR`, `CHARACTER`, `TEXT`, `BINARY`, `VARBINARY`, `VARIANT`, `JSON`, `NULLABLE`, <Ident>, or <QuotedString>
  | |               | |      
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c decimal)
---------- Output ---------
error: 
  --> SQL:1:26
  |
1 | create table a (c decimal)
  | ------          - -------^ expected `(`
  | |               | |       
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (b tuple(c int, uint64));
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | create table a (b tuple(c int, uint64));
  | ------          - -----              ^ expected `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `SMALLINT`, `UINT32`, `INT`, `INTEGER`, `UINT64`, `UNSIGNED`, `BIGINT`, `INT8`, `INT16`, `INT32`, `INT64`, `SIGNED`, `FLOAT32`, `FLOAT`, `FLOAT64`, `DOUBLE`, `DECIMAL`, `ARRAY`, `MAP`, `BITMAP`, `TUPLE`, `DATE`, `DATETIME`, `TIMESTAMP`, `STRING`, `VARCHAR`, `CHAR`, `CHARACTER`, `TEXT`, `BINARY`, `VARBINARY`, `VARIANT`, `JSON`, or `NULLABLE`
  | |               | |                   
  | |               | while parsing TUPLE(<name> <type>, ...)
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [DEFAULT <expr>] [AS (<expr>) VIRTUAL] [AS (<expr>) STORED] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
CREATE TABLE t(c1 NULLABLE(int) NOT NULL);
---------- Output ---------
error: 
  --> SQL:1:41
  |
1 | CREATE TABLE t(c1 NULLABLE(int) NOT NULL);
  | ------                                  ^ ambiguous NOT NULL constraint
  | |                                        
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
drop table if a.b
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | drop table if a.b
  | ----          ^ expected `EXISTS`
  | |              
  | while parsing `DROP TABLE [IF EXISTS] [<database>.]<table>`


---------- Input ----------
truncate table a.b.c.d
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | truncate table a.b.c.d
  |                     ^ expected `FORMAT` or `;`


---------- Input ----------
truncate a
---------- Output ---------
error: 
  --> SQL:1:10
  |
1 | truncate a
  | -------- ^ expected `TABLE`
  | |         
  | while parsing `TRUNCATE TABLE [<database>.]<table>`


---------- Input ----------
drop a
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | drop a
  |      ^ expected `TABLE`, `MASKING`, `CATALOG`, `DATABASE`, `AGGREGATING`, `SCHEMA`, `NETWORK`, `VIEW`, `VIRTUAL`, `USER`, `ROLE`, `FUNCTION`, `STAGE`, `FILE`, or `SHARE`


---------- Input ----------
insert into t format
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | insert into t format
  | ------              ^ expected <Ident> or <QuotedString>
  | |                   
  | while parsing `INSERT INTO [TABLE] <table> [(<column>, ...)] (FORMAT <format> | VALUES <values> | <query>)`


---------- Input ----------
show tables format
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | show tables format
  |                   ^ expected <Ident> or <QuotedString>


---------- Input ----------
alter database system x rename to db
---------- Output ---------
error: 
  --> SQL:1:23
  |
1 | alter database system x rename to db
  | -----                 ^ expected `RENAME` or `.`
  | |                      
  | while parsing `ALTER DATABASE [IF EXISTS] <action>`


---------- Input ----------
create user 'test-e' identified bi 'password';
---------- Output ---------
error: 
  --> SQL:1:33
  |
1 | create user 'test-e' identified bi 'password';
  |                                 ^^ expected `BY`, `WITH`, `FORMAT`, or `;`


---------- Input ----------
create user 'test-e'@'localhost' identified by 'password';
---------- Output ---------
error: 
  --> SQL:1:22
  |
1 | create user 'test-e'@'localhost' identified by 'password';
  | ------               ^^^^^^^^^^^ expected `'%'` or `IDENTIFIED`
  | |                     
  | while parsing `CREATE USER [IF NOT EXISTS] '<username>'@'hostname' IDENTIFIED [WITH <auth_type>] [BY <password>] [WITH <user_option>, ...]`


---------- Input ----------
drop usar if exists 'test-j';
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | drop usar if exists 'test-j';
  |      ^^^^ expected `USER`, `SHARE`, `STAGE`, `AGGREGATING`, `ROLE`, `TABLE`, `SCHEMA`, `NETWORK`, `VIRTUAL`, `CATALOG`, `DATABASE`, `FUNCTION`, `MASKING`, `VIEW`, or `FILE`


---------- Input ----------
alter user 'test-e' identifies by 'new-password';
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | alter user 'test-e' identifies by 'new-password';
  |                     ^^^^^^^^^^ expected `IDENTIFIED`, `WITH`, `FORMAT`, `@`, or `;`


---------- Input ----------
create role 'test'@'%';
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | create role 'test'@'%';
  |                   ^ expected `FORMAT` or `;`


---------- Input ----------
drop role 'test'@'%';
---------- Output ---------
error: 
  --> SQL:1:17
  |
1 | drop role 'test'@'%';
  |                 ^ expected `FORMAT` or `;`


---------- Input ----------
SHOW GRANT FOR ROLE 'role1';
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | SHOW GRANT FOR ROLE 'role1';
  |      ^^^^^ expected `GRANTS`, `CREATE`, `NETWORK`, `CATALOGS`, `FUNCTIONS`, `DATABASES`, `TABLE_FUNCTIONS`, `DROP`, `TABLE`, `ROLES`, `SHARE`, `INDEXES`, `COLUMNS`, `PROCESSLIST`, `STAGES`, `TABLES`, `SHARES`, `ENGINES`, `METRICS`, `SETTINGS`, `SCHEMAS`, `FIELDS`, `USERS`, `FILE`, or `FULL`


---------- Input ----------
GRANT ROLE 'test' TO ROLE test-user;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | GRANT ROLE 'test' TO ROLE test-user;
  |                               ^ expected `FORMAT` or `;`


---------- Input ----------
GRANT SELECT, ALL PRIVILEGES, CREATE ON * TO 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | GRANT SELECT, ALL PRIVILEGES, CREATE ON * TO 'test-grant';
  | ----- ------  ^^^ expected `ALTER`, `SELECT`, `DELETE`, `USAGE`, `INSERT`, `UPDATE`, `SUPER`, `CREATE`, `DROP`, `GRANT`, `SET`, or `OWNERSHIP`
  | |     |        
  | |     while parsing <privileges> ON <privileges_level>
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
GRANT SELECT, CREATE ON *.c TO 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:27
  |
1 | GRANT SELECT, CREATE ON *.c TO 'test-grant';
  | -----                     ^ expected `TO` or `*`
  | |                          
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
REVOKE SELECT, CREATE, ALL PRIVILEGES ON * FROM 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:24
  |
1 | REVOKE SELECT, CREATE, ALL PRIVILEGES ON * FROM 'test-grant';
  | ------ ------          ^^^ expected `ALTER`, `SELECT`, `DELETE`, `USAGE`, `INSERT`, `UPDATE`, `SUPER`, `CREATE`, `DROP`, `GRANT`, `SET`, or `OWNERSHIP`
  | |      |                
  | |      while parsing <privileges> ON <privileges_level>
  | while parsing `REVOKE { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } FROM { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
REVOKE SELECT, CREATE ON * TO 'test-grant';
---------- Output ---------
error: 
  --> SQL:1:28
  |
1 | REVOKE SELECT, CREATE ON * TO 'test-grant';
  | ------                     ^^ expected `FROM` or `.`
  | |                           
  | while parsing `REVOKE { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } FROM { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
COPY INTO mytable FROM 's3://bucket' CREDENTIAL = ();
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | COPY INTO mytable FROM 's3://bucket' CREDENTIAL = ();
  |                                      ^^^^^^^^^^ expected `CREDENTIALS`, `DISABLE_VARIANT_CHECK`, `RETURN_FAILED_ONLY`, `CONNECTION`, `PURGE`, `VALIDATION_MODE`, `FORCE`, `LOCATION_PREFIX`, `SINGLE`, `FORMAT`, `PATTERN`, `FILES`, `MAX_FILES`, `SIZE_LIMIT`, `FILE_FORMAT`, `MAX_FILE_SIZE`, `ON_ERROR`, `SPLIT_SIZE`, or `;`


---------- Input ----------
COPY INTO mytable FROM @mystage CREDENTIALS = ();
---------- Output ---------
error: 
  --> SQL:1:33
  |
1 | COPY INTO mytable FROM @mystage CREDENTIALS = ();
  |                                 ^^^^^^^^^^^ expected `DISABLE_VARIANT_CHECK`, `RETURN_FAILED_ONLY`, `MAX_FILES`, `PURGE`, `VALIDATION_MODE`, `MAX_FILE_SIZE`, `FORCE`, `SINGLE`, `FORMAT`, `PATTERN`, `FILES`, `SIZE_LIMIT`, `SPLIT_SIZE`, `FILE_FORMAT`, `ON_ERROR`, or `;`


---------- Input ----------
CALL system$test
---------- Output ---------
error: 
  --> SQL:1:17
  |
1 | CALL system$test
  | ----            ^ expected `(`
  | |               
  | while parsing `CALL <procedure_name>(<parameter>, ...)`


---------- Input ----------
CALL system$test(a
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | CALL system$test(a
  | ----              ^ expected `)` or `,`
  | |                 
  | while parsing `CALL <procedure_name>(<parameter>, ...)`


---------- Input ----------
show settings ilike 'enable%'
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | show settings ilike 'enable%'
  |               ^^^^^ expected `LIKE`, `FORMAT`, or `;`


---------- Input ----------
PRESIGN INVALID @my_stage/path/to/file
---------- Output ---------
error: 
  --> SQL:1:9
  |
1 | PRESIGN INVALID @my_stage/path/to/file
  | ------- ^^^^^^^ expected `DOWNLOAD`, `AtString`, `UPLOAD`, or <QuotedString>
  | |        
  | while parsing `PRESIGN [{DOWNLOAD | UPLOAD}] <location> [EXPIRE = 3600]`


---------- Input ----------
SELECT * FROM t GROUP BY GROUPING SETS a, b
---------- Output ---------
error: 
  --> SQL:1:35
  |
1 | SELECT * FROM t GROUP BY GROUPING SETS a, b
  |                                   ^^^^ expected `SELECT`, `INTERSECT`, `WITH`, `EXCEPT`, `VALUES`, `OFFSET`, `IGNORE_RESULT`, `,`, `HAVING`, `WINDOW`, `(`, `UNION`, `ORDER`, `LIMIT`, `FORMAT`, or `;`


---------- Input ----------
SELECT * FROM t GROUP BY GROUPING SETS ()
---------- Output ---------
error: 
  --> SQL:1:41
  |
1 | SELECT * FROM t GROUP BY GROUPING SETS ()
  | ------                                  ^ expected `(`, `IS`, `IN`, `EXISTS`, `BETWEEN`, `+`, `-`, `*`, `/`, `//`, `DIV`, `%`, `||`, `<->`, `>`, `<`, `>=`, `<=`, `=`, `<>`, `!=`, `^`, `AND`, `OR`, `XOR`, `LIKE`, `NOT`, `REGEXP`, `RLIKE`, `SOUNDS`, <BitWiseOr>, <BitWiseAnd>, <BitWiseXor>, <ShiftLeft>, <ShiftRight>, <Factorial>, <SquareRoot>, <BitWiseNot>, <CubeRoot>, <Abs>, `CAST`, `TRY_CAST`, `DATE_ADD`, `DATE_SUB`, `DATE_TRUNC`, `DATE`, `TIMESTAMP`, `INTERVAL`, `::`, `EXTRACT`, `POSITION`, `SUBSTRING`, `SUBSTR`, `TRIM`, `COUNT`, <Ident>, <QuotedString>, `CASE`, `ColumnPosition`, `[`, or 14 more ...
  | |                                        
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10 order by bb;
---------- Output ---------
error: 
  --> SQL:1:30
  |
1 | select * from aa.bb limit 10 order by bb;
  | ------                       ^^^^^ ORDER BY must appear before LIMIT
  | |                             
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb offset 10 order by bb;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | select * from aa.bb offset 10 order by bb;
  | ------                        ^^^^^ ORDER BY must appear before OFFSET
  | |                              
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb offset 10 limit 1;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | select * from aa.bb offset 10 limit 1;
  | ------                        ^^^^^ LIMIT must appear before OFFSET
  | |                              
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb order by a order by b;
---------- Output ---------
error: 
  --> SQL:1:32
  |
1 | select * from aa.bb order by a order by b;
  | ------                         ^^^^^ duplicated ORDER BY clause
  | |                               
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb offset 10 offset 20;
---------- Output ---------
error: 
  --> SQL:1:31
  |
1 | select * from aa.bb offset 10 offset 20;
  | ------                        ^^^^^^ duplicated OFFSET clause
  | |                              
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10 limit 20;
---------- Output ---------
error: 
  --> SQL:1:30
  |
1 | select * from aa.bb limit 10 limit 20;
  | ------                       ^^^^^ duplicated LIMIT clause
  | |                             
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10,2 offset 2;
---------- Output ---------
error: 
  --> SQL:1:32
  |
1 | select * from aa.bb limit 10,2 offset 2;
  | ------                         ^^^^^^ LIMIT n,m should not appear OFFSET
  | |                               
  | while parsing `SELECT ...`


---------- Input ----------
select * from aa.bb limit 10,2,3;
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | select * from aa.bb limit 10,2,3;
  | ------              ^^^^^ [LIMIT n OFFSET m] or [LIMIT n,m]
  | |                    
  | while parsing `SELECT ...`


---------- Input ----------
with a as (select 1) with b as (select 2) select * from aa.bb;
---------- Output ---------
error: 
  --> SQL:1:43
  |
1 | with a as (select 1) with b as (select 2) select * from aa.bb;
  | ----                                      ^^^^^^ duplicated WITH clause
  | |                                          
  | while parsing `SELECT ...`


---------- Input ----------
copy into t1 from "" FILE
---------- Output ---------
error: 
  --> SQL:1:22
  |
1 | copy into t1 from "" FILE
  |                      ^^^^ expected `FILES`, `FILE_FORMAT`, `MAX_FILE_SIZE`, `SINGLE`, `RETURN_FAILED_ONLY`, `DISABLE_VARIANT_CHECK`, `FORCE`, `SIZE_LIMIT`, `PURGE`, `FORMAT`, `PATTERN`, `ON_ERROR`, `SPLIT_SIZE`, `VALIDATION_MODE`, `.`, `(`, `MAX_FILES`, or `;`


---------- Input ----------
copy into t1 from "" FILE_FORMAT
---------- Output ---------
error: 
  --> SQL:1:33
  |
1 | copy into t1 from "" FILE_FORMAT
  | ----                            ^ expected `=`
  | |                               
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = 
---------- Output ---------
error: 
  --> SQL:1:36
  |
1 | copy into t1 from "" FILE_FORMAT = 
  | ----                               ^ expected `(`
  | |                                  
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (
---------- Output ---------
error: 
  --> SQL:1:37
  |
1 | copy into t1 from "" FILE_FORMAT = (
  | ----                                ^ expected `)`, `TYPE`, `COMPRESSION`, `FORMAT_NAME`, `RECORD_DELIMITER`, `FIELD_DELIMITER`, `QUOTE`, `NAN_DISPLAY`, `NULL_DISPLAY`, `ESCAPE`, `ROW_TAG`, `SKIP_HEADER`, `ERROR_ON_COLUMN_COUNT_MISMATCH`, or `NON_DISPLAY`
  | |                                   
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (TYPE
---------- Output ---------
error: 
  --> SQL:1:41
  |
1 | copy into t1 from "" FILE_FORMAT = (TYPE
  | ----                                    ^ expected `)` or `=`
  | |                                       
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (TYPE =
---------- Output ---------
error: 
  --> SQL:1:43
  |
1 | copy into t1 from "" FILE_FORMAT = (TYPE =
  | ----                                      ^ expected `)`, `TSV`, `CSV`, `NDJSON`, `PARQUET`, `JSON`, `XML`, or <QuotedString>
  | |                                         
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
copy into t1 from "" FILE_FORMAT = (TYPE =
---------- Output ---------
error: 
  --> SQL:1:43
  |
1 | copy into t1 from "" FILE_FORMAT = (TYPE =
  | ----                                      ^ expected `)`, `TSV`, `CSV`, `NDJSON`, `PARQUET`, `JSON`, `XML`, or <QuotedString>
  | |                                         
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
COPY INTO t1 FROM "" PATTERN = '.*[.]csv' FILE_FORMAT = (type = TSV field_delimiter = '\t' skip_headerx = 0);
---------- Output ---------
error: 
  --> SQL:1:92
  |
1 | COPY INTO t1 FROM "" PATTERN = '.*[.]csv' FILE_FORMAT = (type = TSV field_delimiter = '\t' skip_headerx = 0);
  | ----                                                                                       ^^^^^^^^^^^^ expected `SKIP_HEADER`, `FIELD_DELIMITER`, `ESCAPE`, `NON_DISPLAY`, `NULL_DISPLAY`, `TYPE`, `NAN_DISPLAY`, `ROW_TAG`, `RECORD_DELIMITER`, `QUOTE`, `COMPRESSION`, `FORMAT_NAME`, `ERROR_ON_COLUMN_COUNT_MISMATCH`, `)`, or `,`
  | |                                                                                           
  | while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`


---------- Input ----------
COPY INTO mytable
                FROM @my_stage
                FILE_FORMAT = (
                    type = CSV,
                    error_on_column_count_mismatch = 1
                )
---------- Output ---------
error: 
  --> SQL:5:54
  |
1 | COPY INTO mytable
  | ---- while parsing `COPY
                INTO { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> }
                FROM { internalStage | externalStage | externalLocation | [<database_name>.]<table_name> | ( <query> ) }
                [ FILE_FORMAT = ( { TYPE = { CSV | JSON | PARQUET } [ formatTypeOptions ] } ) ]
                [ FILES = ( '<file_name>' [ , '<file_name>' ] [ , ... ] ) ]
                [ PATTERN = '<regex_pattern>' ]
                [ VALIDATION_MODE = RETURN_ROWS ]
                [ copyOptions ]`
2 |                 FROM @my_stage
3 |                 FILE_FORMAT = (
4 |                     type = CSV,
5 |                     error_on_column_count_mismatch = 1
  |                                                      ^ expected `TRUE` or `FALSE`


